# ML-DL

./: .gitignore  CLAUDE.md  README.md  REFACTOR_PLAN.md  analysis_report.md  package-lock.json  unified_ablation_processor.py  unified_novpn_processor.py  unified_vpn_processor.py
AppScanner/: CLAUDE.md  README.md  ablation_processor.py  cic_iot_2022_processor.py  config.py  cross_platform_processor.py  data.py  engine.py  iscx_tor_processor.py  iscx_vpn_processor.py  iscxvpn_processor.py  large_data_processor.py  models.py  requirements.txt  resume_rf_evaluation.py  run_all_experiments.sh  split_topk_classes.py  tests.py  train.py  train_ablation.py  train_args.py  train_experiments.sh  train_iscx_vpn.py  train_multi_datasets.py  train_vpn.py  train_with_dataset.py  ustc_processor.py  vpn_build_npz.py
DataDealer/: scp_upload.py  unified_ablation_processor.py  unified_novpn_processor.py  unified_vpn_processor.py
DeepFingerprinting/: CLAUDE.md  Model_NoDef_pytorch.py  binary_make_npz_from_pcaps.py  data_processor.py  inspect_npz.py  lab_runner.py  large_data_processor.py  run_train.py  split_topk_classes.py  train.py  train_ablation.py  train_df_from_npz.py  train_multi_datasets.py  train_temp.py  train_test_df_from_npz.py  train_vpn.py  train_with_dataset.py
FS-Net/: .gitignore  CLAUDE.md  README.md  ablation_processor.py  config.py  data.py  (+19 more)
YaTC/refactor/: README.md  __init__.py  analysis_report.md  config.py  data.py  engine.py  evaluate.py  finetune.py  finetune_ablation.py  finetune_all.py  implementation_details.md  model_spec.md  models.py  pcap_to_mfr.py  pretrain.py  pyproject.toml  requirements.txt  test_report.md  tests.py  train.py  train_multi_datasets.py
YaTC/refactor/.github/workflows/: ci.yml
(+52 files in other folders)
